--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@ nRF5_SDK_12.0.0_12f24da
 nRF5_SDK_12.0.0_12f24da.zip
 nRF5_SDK_12.1.0_0d23e2a
 nRF5_SDK_12.1.0_0d23e2a.zip
+nRF5_SDK_12.2.*
+nRF5_SDK_13.*
